# ess-ope-diagnostics

./: .gitignore  README.md  pyproject.toml
configs/env/: random_mdp_default.yaml
configs/policies/: softmax_default.yaml
configs/study/: experiment_1.yaml  experiment_2.yaml  experiment_3.yaml  experiment_4.yaml  experiment_5.yaml  paper_full.yaml  paper_practical.yaml  paper_tiny.yaml
configs/sweeps/: chain_bandit_baseline.yaml  chain_bandit_ci_focused.yaml  chain_bandit_focused.yaml  random_mdp_baseline.yaml  random_mdp_ci_focused.yaml  random_mdp_ci_ultra.yaml  random_mdp_intensive.yaml  random_mdp_robust.yaml  random_mdp_ultra.yaml
configs/v2/: bandit_phase.yaml  bandit_phase_fast.yaml  bandit_phase_practical.yaml  paper_suite.yaml  paper_suite_fast.yaml  paper_suite_practical.yaml  paper_suite_tiny.yaml  rare_event_phase.yaml  (+8 more)
experiments/: analyze_results.py  analyze_v2_results.py  run_benchmark.py  run_experiment.py  run_single.py  run_study.py  run_v2_phase.py  run_v2_suite.py
notebooks/: 01_run_benchmark.ipynb  02_interpret_results.ipynb
results/: latest_runs.json
tests/: test_chain_bandit_env.py  test_chain_bandit_fqe.py  test_chain_bandit_summary.py  test_chain_bandit_sweep.py  test_dr_confidence.py  test_envs.py  test_fqe.py  test_interval_pipeline.py  test_logging_latest.py  test_reporting_pipeline.py  test_study_analysis.py  test_study_envs.py  test_study_estimators.py  test_study_inference.py  test_study_runner.py  test_v2_analysis.py  test_v2_envs.py  test_v2_estimators.py  test_v2_inference.py  test_v2_runner.py  test_weights.py
(+73 files in other folders)
